<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2016 Google Inc. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/new_flex_items_default"
        android:key="@string/new_flex_items_default_key">
        <EditTextPreference
            android:key="@string/new_flex_item_order_key"
            android:title="@string/hint_order"
            android:inputType="numberSigned"
            android:persistent="true"
            android:defaultValue="1" />

        <EditTextPreference
            android:key="@string/new_flex_grow_key"
            android:title="@string/hint_flex_grow"
            android:inputType="numberDecimal"
            android:persistent="true"
            android:defaultValue="0.0" />

        <EditTextPreference
            android:key="@string/new_flex_shrink_key"
            android:title="@string/hint_flex_shrink"
            android:inputType="numberDecimal"
            android:persistent="true"
            android:defaultValue="1.0" />

        <EditTextPreference
            android:key="@string/new_flex_basis_percent_key"
            android:title="@string/flex_basis_percent"
            android:summary="@string/flex_basis_percent_summary"
            android:inputType="numberSigned"
            android:persistent="true"
            android:defaultValue="-1" />

        <EditTextPreference
            android:key="@string/new_width_key"
            android:title="@string/width"
            android:summary="@string/size_unit_summary"
            android:inputType="numberSigned"
            android:persistent="true"
            android:defaultValue="120" />

        <EditTextPreference
            android:key="@string/new_height_key"
            android:title="@string/height"
            android:summary="@string/size_unit_summary"
            android:inputType="numberSigned"
            android:persistent="true"
            android:defaultValue="80" />
    </PreferenceCategory>
</PreferenceScreen>