<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2016 Google Inc. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:singleLine="true"
                android:inputType="numberSigned"
                android:hint="@string/hint_order" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_flex_grow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_flex_grow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:hint="@string/hint_flex_grow" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_flex_shrink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_flex_shrink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:hint="@string/hint_flex_shrink" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_flex_basis_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_flex_basis_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:singleLine="true"
                android:inputType="numberSigned"
                android:hint="@string/hint_flex_basis_percent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:singleLine="true"
                android:inputType="numberSigned"
                android:hint="@string/hint_width" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:singleLine="true"
                android:inputType="numberSigned"
                android:hint="@string/hint_height" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_tiny"
                android:paddingLeft="@dimen/margin_tiny"
                android:paddingEnd="@dimen/margin_tiny"
                android:paddingRight="@dimen/margin_tiny"
                android:text="@string/hint_align_self" />

            <Spinner
                android:id="@+id/spinner_align_self"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:gravity="bottom"
            style="?android:attr/buttonBarStyle">

            <View
                android:id="@+id/spacer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button_cancel"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button_ok"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
